# SimpleAITranslatorUserInterface

./: README.md  main.py  pyproject.toml  testv2.py
